--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,9 +6,13 @@
     width: 100vw;
     display: flex;
 
-    .content_container {
-        height: 100%;
-        width: 100%;
-        overflow: scroll;
-    }
+        .content_container {
+            width: 100%;
+            height: 100%;
+            overflow-y: hidden;
+
+            @media (max-width: 768px) {
+                overflow-y: scroll;
+            }
+        }
 }
