--- a/src/components/order/CreateOrderForm/CreateOrder.module.scss
+++ b/src/components/order/CreateOrderForm/CreateOrder.module.scss
@@ -7,7 +7,10 @@
     justify-content: flex-start;
     padding: 30px 15px 30px 15px;
     position: relative;
-   
+    max-height: 90vh;
+    overflow-y: scroll;
+    @extend %custom-scrollbar;
+  
     &.active_add_product {
       .overlay {
         position: absolute;
@@ -55,8 +58,8 @@
     gap: 10px;
 
     .buttons_container {
-        margin-top: 10px;
         width: 100%;
+        margin: 20px 0 20px 0;
         @extend %flex-center;
         gap: 30px;
     }
