refactoring TagDropDown, bugfix Textarea

--- a/src/components/order/CreateOrderForm/CreateOrder.module.scss
+++ b/src/components/order/CreateOrderForm/CreateOrder.module.scss
@@ -47,7 +47,7 @@
 
 .source_tag_container {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
    gap: 10px;
 
