--- a/src/components/order/Delivery/Post/Post.module.scss
+++ b/src/components/order/Delivery/Post/Post.module.scss
@@ -3,31 +3,34 @@
 .container {
     height: 100vh;
     background-color: #FFFBFA;
-    max-height: 100vh;
-    overflow-y: scroll;
-    @extend %custom-scrollbar;
 
-        .buttons_container {
-            fill: white;
-            padding: 30px 20px 10px 20px;
-            border-bottom: 2px solid #EBECF0;
-            
+.wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+    .buttons_container {
+        fill: white;
+        padding: 30px 20px 10px 20px;
+        border-bottom: 2px solid #EBECF0;
 
-            .post {
-                padding: 10px;
-                background-color: #DA291C;
-            }
-        }  
-
-        .post_elements {
-            
-            display: flex;
-            flex-direction: column;
-
-            .button {
-                margin: 20px 0 20px 0;
-                padding: 0 20px 0 20px;
-            }
+        .post {
+            padding: 10px;
+            background-color: #DA291C;
         }
+    }  
+
+    .post_elements {
+        flex-grow: 1; 
+        max-height: 80vh;
+        overflow-y: scroll;
+        @extend %custom-scrollbar;
+        display: flex;
+        flex-direction: column;
     }
-   
+
+    .button {
+        background-color: #ffff;
+        padding: 19px 21px 19px 21px; 
+    }
+}
