--- a/src/components/order/OrderInfo/Note/Note.module.scss
+++ b/src/components/order/OrderInfo/Note/Note.module.scss
@@ -1,8 +1,8 @@
 @import '../../../../styles/global.scss';
 
 .container { 
-    width: 100%;
     height: 100%;
+    width: 100%;
 }
 .value {
     padding: 12px;
@@ -11,5 +11,7 @@
     line-height: 17px; 
     background-color: #ffff;
     border: 1px solid #EBECEE;
+    max-height: 65vh;
+    overflow: hidden;
 }
 
