--- a/src/components/order/CreateOrderForm/CreateOrder.module.scss
+++ b/src/components/order/CreateOrderForm/CreateOrder.module.scss
@@ -1,5 +1,5 @@
 @import "../../../styles/templates.scss";
-
+@import "../../../styles/global.scss";
 .container { 
     height: 100%;
     display: flex;
