--- a/src/components/order/Tags/TagDropDown/TagItem/TagItem.module.scss
+++ b/src/components/order/Tags/TagDropDown/TagItem/TagItem.module.scss
@@ -1,5 +1,6 @@
 @import "../../../../../styles/templates.scss";
 .container {
+    font-size: 12px;
     padding: 0 4px 0 4px;
     width: max-content;
     height: 20px;
