--- a/src/components/shared/ui/Input/Input.module.scss
+++ b/src/components/shared/ui/Input/Input.module.scss
@@ -16,7 +16,6 @@ input[type="number"] {
 }
 
 .inputContainer {
-
     height: 32px;
     width: 100%;
     font-family: $font-family-compact;
@@ -57,7 +56,8 @@ input[type="number"] {
 }
 
 .input {
-    text-indent: 3%;
+    padding: 4px 12px;
+    text-indent: 1%;
     width: 100%;
     height: auto;
     font-family: $font-family-ligth-compact;
@@ -101,6 +101,7 @@ input[type="number"] {
     }
 
     &.searchIcon {
+        margin-left: 5px;
         width: 15.65px;
         height: 15.77px;
     }
