--- a/src/components/shared/ui/Textarea/Textarea.module.scss
+++ b/src/components/shared/ui/Textarea/Textarea.module.scss
@@ -12,6 +12,7 @@
     border: none;
     padding: 12px;
     overflow: hidden;
+    white-space: wrap;
     @extend %custom-scrollbar;
     &.border { 
         &:focus {
