--- a/src/components/order/OrderInfo/Notes/Notes.module.scss
+++ b/src/components/order/OrderInfo/Notes/Notes.module.scss
@@ -15,6 +15,7 @@
 }
 .notes_container{ 
    display: flex;
+   flex-grow: 1;
    flex-direction: column-reverse;
    gap: 10px;
    max-height: 70vh;
