--- a/src/components/orders/OrderColumn/OrderColumn.module.scss
+++ b/src/components/orders/OrderColumn/OrderColumn.module.scss
@@ -1,40 +1,13 @@
-.container {
+.container { 
+    height: 100%;
     min-width: 178px;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 23px;
-    color: #172B4D;
     display: flex;
     flex-direction: column;
+    gap: 15px;
 
-    .color {
-        width: 100%;
-        height: 6px;
-        border-radius: 3px;
-    }
-
-    .title {
-        width: 100%;
-       display: flex;
-       justify-content: space-between;
-       align-items: center;
-       gap:  20px;
-
-       
-       .name {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-       }
-    }
-
-    .info {
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 20px;
-        color: #6B778C;
+    .orders_container {
         display: flex;
-        justify-content: flex-start;
-        gap: 15px;
+        flex-direction: column;
+        gap: 10px;
     }
 }
