--- a/src/styles/templates.scss
+++ b/src/styles/templates.scss
@@ -1,6 +1,7 @@
 %custom-scrollbar {
     &::-webkit-scrollbar {
       width: 5px;
+      height: 10px;
     }
     
     &::-webkit-scrollbar-thumb {
