--- a/src/components/orders/OrderSmall/OrderSmall.module.scss
+++ b/src/components/orders/OrderSmall/OrderSmall.module.scss
@@ -6,8 +6,18 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
- 
-    
+
+        &.tranform { 
+            box-shadow: 0px 0px 1px 0px #091E424F;
+            box-shadow: 0px 3px 5px 0px #091E4233;
+            background-color: #0747A6;
+
+        }
+
+     &:hover { 
+        cursor: pointer;
+     }
+     
     .info_block {
         color: #6B778C;
         opacity: 50%;
