add address block

--- a/src/components/shared/ui/DropDown/DropDown.module.scss
+++ b/src/components/shared/ui/DropDown/DropDown.module.scss
@@ -2,6 +2,7 @@
 @import "../../../../styles//templates.scss";
 
 .container {
+    width: 100%;
     font-family: $font-family-compact;
     font-size: 12px;   
     position: relative;
