--- a/src/components/order/AbstractFormComponent/AbstractFormComponent.module.scss
+++ b/src/components/order/AbstractFormComponent/AbstractFormComponent.module.scss
@@ -12,6 +12,7 @@
 
     .label_container{ 
         height: 100%;
+        min-width: max-content;
         display: flex;
         justify-content: center;
         align-items: center;
