add list addresses, list recipients, add buttons: edit, delete, add

--- a/src/components/order/CreateOrderForm/BuyerForm/BlockLabel/BlockLabel.module.scss
+++ b/src/components/order/CreateOrderForm/BuyerForm/BlockLabel/BlockLabel.module.scss
@@ -1,6 +1,7 @@
 @import "../../../../../styles/templates.scss";
 
 .container {
+    padding: 0 5px;
     height: 32px;
     display: flex;
     align-items: center;
@@ -15,6 +16,7 @@
 }
 
 .full_and_button {
+  
     display: flex;
     align-items: center;
     width: 100%;
