--- a/src/components/shared/ui/Buttons/CloseButton/CloseButton.module.scss
+++ b/src/components/shared/ui/Buttons/CloseButton/CloseButton.module.scss
@@ -1,5 +1,4 @@
-@import "../../../../styles/templates.scss";
-
+@import "../../../../../styles/templates.scss";
 
 .container {
     position: relative;
